--- a/src/app/Sections/section-sales/section-sales.component.html
+++ b/src/app/Sections/section-sales/section-sales.component.html
@@ -1,1 +1,46 @@
-<p>section-sales works!</p>
+<div class="section-container">
+  <div class="row-fluid cards">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card mb-3 shadow card-theme h-100">
+          <div class="card-header card-header-theme">
+            <h5>Daily Orders</h5>
+          </div>
+          <div class="card-body">
+            <app-bar-chart></app-bar-chart>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3 shadow card-theme h-100">
+          <div class="card-header card-header-theme">
+            <h5>Pie Chart</h5>
+          </div>
+          <div class="card-body">
+            <app-pie-chart></app-pie-chart>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3 shadow card-theme h-100">
+          <div class="card-header card-header-theme">
+            <h5>Pie Chart</h5>
+          </div>
+          <div class="card-body">
+            <app-pie-chart></app-pie-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid cards">
+    <div class="card mb-3 shadow card-theme card-bottom">
+      <div class="card-header card-header-theme">
+        <h5>Line Chart</h5>
+      </div>
+      <div class="card-body">
+        <app-line-chart></app-line-chart>
+      </div>
+    </div>
+  </div>
+</div>
