--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Hello</h1>
+<app-navbar id="navbar" class="navbar navbar-dark fixed-top bg-dark"></app-navbar>
+
+<div class="container-fluid">
+  <div class="row" id="mainContent">
+    <app-sidebar class="col-sm-3 col-md-2 d-none d-sm-block sidebar" id="sideBar"></app-sidebar>
+    <div class="col-sm-9 ms-auto col-md-10 pt-3" id="dashboard">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
