--- a/src/app/Sections/section-health/section-health.component.html
+++ b/src/app/Sections/section-health/section-health.component.html
@@ -1,1 +1,11 @@
-<p>section-health works!</p>
+<div class="section-container">
+  <h2>System Health</h2>
+  <div class="card-group">
+    <div *ngFor="let server of servers">
+      <div class="col">
+        <app-server [serverInput] = "server"></app-server>
+      </div>
+
+    </div>
+  </div>
+</div>
