--- a/src/app/server/server.component.css
+++ b/src/app/server/server.component.css
@@ -2,7 +2,7 @@
   width: 200px;
   height: 200px;
   font-size: 1.3em;
-  color: #000;
+  color: whitesmoke;
   text-align: center;
   padding: 0 20px;
   margin: 20px;
