--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,9 +1,9 @@
-<div class="card shadow block-status" style="margin-right:30px!important;">
+<div class="card shadow block-status" [ngStyle]="{'background-color': color}" style="margin-right:30px!important;">
   <div class="card-header name">
     {{serverInput.name}}
   </div>
   <div class="card-body status">
     {{serverInput.isOnline}}
   </div>
-  <button class="btn btn-light action">Toggle Status</button>
+  <button class="btn btn-primary action" (click)="toggleStatus(serverInput.isOnline)">Toggle Status</button>
 </div>
