--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,9 +1,18 @@
-<div class="card shadow block-status" [ngStyle]="{'background-color': color}" style="margin-right:30px!important;">
+<div
+  class="card shadow block-status"
+  [ngStyle]="{ 'background-color': color }"
+  style="margin-right: 30px !important"
+>
   <div class="card-header name">
-    {{serverInput.name}}
+    {{ serverInput.name }}
   </div>
   <div class="card-body status">
-    {{serverInput.isOnline}}
+    {{ serverInput.isOnline }}
   </div>
-  <button class="btn btn-primary action" (click)="toggleStatus(serverInput.isOnline)">Toggle Status</button>
+  <button
+    class="btn btn-primary action"
+    (click)="toggleStatus(serverInput.isOnline)"
+  >
+    {{ buttonText }}
+  </button>
 </div>
