--- a/src/app/Sections/section-orders/section-orders.component.html
+++ b/src/app/Sections/section-orders/section-orders.component.html
@@ -1,24 +1,22 @@
 <div class="section-container">
-  <h2>Latest Orders</h2>
+  <h2>Reviews</h2>
   <table class="table table-dark table-striped table-hover">
     <thead class="thead-dark">
       <tr>
         <th>ID</th>
-        <th>Customer</th>
-        <th>Amount</th>
-        <th>Order Placed</th>
-        <th>Order Fulfilled</th>
+        <th>Name</th>
         <th>Status</th>
+        <th>Create Time</th>
+        <th>Process Time</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let order of orders">
-        <td>{{ order.id }}</td>
-        <td>{{ order.customer.name }}</td>
-        <td>{{ order.total }}</td>
-        <td>{{ order.placed | date: 'short' }}</td>
-        <td>{{ order.fulfilled | date: 'short' }}</td>
-        <td>Status</td>
+      <tr *ngFor="let review of reviews">
+        <td>{{ review.id }}</td>
+        <td>{{ review.cneeName }}</td>
+        <td>{{ review.status }}</td>
+        <td>{{ review.timeCreated | date: "short" }}</td>
+        <td>{{ review.timeProcessed | date: "short" }}</td>
       </tr>
     </tbody>
   </table>
